# crack-be-yogaaaa123

./: .env.example  .gitignore  API_TEST_GUIDE.md  ARCHITECTURE.md  CODE_REVIEW.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  fix-all.sh  fix-tenant.sh  package-lock.json  package.json  penjelasan-proyek.md  plan.md  task-progress.md  task-suggestions.md  tsconfig.json
.omo/plans/: comprehensive-test-suite.md
.sisyphus/plans/: cookie-auth-migration.md  security-fixes.md
crack-ai/: .env  .env.example  .gitignore  Dockerfile  README.md  ai_service.py  auth.py  backend_client.py  config.py  database.py  logging_config.py  main.py  pyproject.toml  schemas.py  tools.py
crack-ai/app/: main.py
crack-ai/app/core/: auth.py
crack-ai/app/db/: database.py
crack-ai/app/services/: ai_service.py  backend_client.py  tools_registry.py
crack-ai/app/tools/: __init__.py  categories.py  dashboard.py  inventory.py  products.py  sales.py  suppliers.py  users.py
crack-ai/tools/: __init__.py  categories.py  dashboard.py  inventory.py  products.py  sales.py  suppliers.py  users.py
prisma/: schema.prisma  seed.ts  seed.ts.backup
prisma/seed/: categories.ts  cleanup.ts  index.ts  products.ts  purchase-orders.ts  sales-orders.ts  summary.ts  suppliers.ts  tenant-and-users.ts
scratch/: test-prisma.ts
src/: app.module.ts  logger.config.ts  main.ts  prisma.extension.ts  prisma.service.ts
src/activity-log/: activity-log.controller.ts  activity-log.module.ts  activity-log.service.ts
src/admin/: admin.controller.ts  admin.module.ts  (+1 more)
test/: app.e2e-spec.ts
(+99 files in other folders)
